# SDEN

./: CMakeLists.txt  README.md
cmake/: vsorganizing.cmake
sden/project/: camera.cpp  camera.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h
sden/shaders/: normal.frag  normal.vert  skybox.frag  skybox.vert  texture.frag  unlit.frag  unlit.vert  vertex.vert
